--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@cosmostation/cosmosjs": "^0.10",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
